--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,6 +16,8 @@
         <input type="password" name="password" placeholder="Password" required>
         <button type="submit">Login</button>
     </form>
-    <p>Don't have an account? <a href="/signup">Sign Up</a></p>
+    <form action="/signup" method="GET">
+        <button type="submit">Regístrate</button>
+    </form>
 </body>
 </html>
